@@ -1,3 +1,10 @@
+2005-05-05  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirread.c: Ensure that broken files with too many
+	values in PerSampleShorts work ok instead of crashing.
+
+	http://bugzilla.remotesensing.org/show_bug.cgi?id=843
+
 2005-04-27  Andrey Kiselev  <dron@remotesensing.org>
 
 	* tools/tiffdither.c: Copy the PhotometricInterpretation tag from the
